# game_engine

./: .gitignore  CMakeLists.txt  README.md  class_testing.cpp  test_scene.cpp
engine/: Consts.h  Engine.cpp  Mesh.cpp
engine/animation/: ATranslate.h
engine/gui/: Window.cpp  Window.h
engine/io/: Screen.cpp  Screen.h  SoundController.cpp  SoundController.h
engine/math/: Matrix4x4.cpp  Matrix4x4.h  Plane.h  Vec2D.cpp  Vec2D.h  Vec3D.cpp  Vec3D.h  Vec4D.cpp  Vec4D.h
engine/physics/: HitBox.h  RigidBody.cpp  RigidBody.h  Simplex.h
